--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "12.1.6",
-    "@emotion/styled": "^11.9.3",
-    "@emotion/react": "^11.9.0",
     "@chakra-ui/react": "^1.8.8",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.9.3",
+    "@supabase/supabase-js": "^2.26.0",
     "framer-motion": "^3.10.6",
+    "next": "12.1.6",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
